試合結果をSELECTで取得して表示する

--- a/src/main/resources/templates/lec02.html
+++ b/src/main/resources/templates/lec02.html
@@ -7,13 +7,25 @@
 
 <body>
   <div><a href="/logout">ログアウト</a></div>
-  <p>
-    <div th:if="${login_user}">
-      Hi [[${login_user}]]
-    </div>
-  <h2>エントリー</h2>
-    <ul>
-      <li th:each="user,stat:${users}">[[${user.name}]]</li>
+  <div th:if="${login_user}">
+    Hi [[${login_user}]]
+  </div>
+  <div th:if="${users}">
+    <h2>エントリー</h2>
+      <ul>
+        <li th:each="user,stat:${users}">[[${user.name}]]</li>
+      </ul>
+  </div>
+  </div>
+    <h2>試合結果</h2>
+    <ul style="list-style: none; padding-left: 0;">
+      <li th:each="match,stat:${matches}">
+        id:[[${match.id}]]
+        user_1:[[${match.user_1}]]
+        user_2:[[${match.user_2}]]
+        user_1の手:[[${match.user_1_hand}]]
+        user_2の手:[[${match.user_2_hand}]]
+      </li>
     </ul>
   </div>
   <p>
